--- a/assets/scss/baseline.scss
+++ b/assets/scss/baseline.scss
@@ -67,7 +67,11 @@ a{
 	color:$link;
     text-decoration: none;
 
-	&:hover, &:focus{
+    &:hover {
+        font-weight: 600;
+    }
+
+	&:focus{
         background: $select;
 	    color: $link_hover;
 	}
@@ -98,6 +102,9 @@ h1,h2,h3,h4,h5,h6{
 
 h1, .alpha {
     font-size: 2em;
+}
+
+h1 {
     font-weight: 800;
     padding-top: 0.25em;
     margin-bottom: 0.5em;
@@ -105,6 +112,9 @@ h1, .alpha {
 
 h2, .beta {
     font-size: 1.5em;
+}
+
+h2 {
     font-weight: 800;
     line-height: 1;
     padding-top: 0.35em;
@@ -113,6 +123,9 @@ h2, .beta {
 
 h3, .gamma {
     font-size: 1.2em;
+}
+
+h3 {
     font-weight: 800;
     line-height: 1.25;
     padding-top: 0.45em;
@@ -121,6 +134,9 @@ h3, .gamma {
 
 h4, .delta {
     font-size: 1em;
+}
+
+h4 {
     font-weight: 800;
     line-height: 1.25;
     padding-top: 0.45em;
@@ -129,6 +145,9 @@ h4, .delta {
 
 h5, .epsilon {
     font-size: 1.2em;
+}
+
+h5 {
     font-weight: 600;
     padding-top: 0.6em;
     margin-bottom: 0.9em;
@@ -136,6 +155,9 @@ h5, .epsilon {
 
 h6, .zeta {
     font-size: 1em;
+}
+
+h6 {
     font-weight: 600;
     margin-bottom: 0;
 }
@@ -181,7 +203,7 @@ form ul{
     margin:0;
     padding:0;
     li{
-        @include clearfix();
+        @extend .clearfix;
         margin-bottom:1.5em;
     }
 }
