--- a/assets/scss/baseline.scss
+++ b/assets/scss/baseline.scss
@@ -68,12 +68,12 @@ a{
     text-decoration: none;
 
     &:hover {
-        font-weight: 600;
+        color: $link_hover;
     }
 
 	&:focus{
         background: $select;
-	    color: $link_hover;
+	    color: white;
 	}
 
 	// Optional transition
@@ -92,12 +92,6 @@ h1,h2,h3,h4,h5,h6{
 	margin-top:0;
     font-family: $heading_family;
     color: #444;
-}
-
-.dayumdayumdayum {
-    font-size: 4.125em;
-    font-weight: 400;
-    line-height: 1;
 }
 
 h1, .alpha {
@@ -126,6 +120,7 @@ h3, .gamma {
 }
 
 h3 {
+    color: tint($body_color, 25%);
     font-weight: 800;
     line-height: 1.25;
     padding-top: 0.45em;
@@ -144,7 +139,7 @@ h4 {
 }
 
 h5, .epsilon {
-    font-size: 1.2em;
+    font-size: 1em;
 }
 
 h5 {
@@ -154,7 +149,7 @@ h5 {
 }
 
 h6, .zeta {
-    font-size: 1em;
+    font-size: 0.8em;
 }
 
 h6 {
