--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -170,7 +170,7 @@ $green: #6bac60;
 .icon-users:before { content: '\a965'; } /* 'ꥥ' */
 .icon-doc-text:before { content: '\a902'; } /* '꤂' */
 .icon-download:before { content: '\a941'; } /* 'ꥁ' */
-.icon-clock:before { content: '🕔'; } /* '\1f554' */
+.icon-clock:before { content: '\1f554'; } /* '\1f554' */
 
 body {
 	background: #fcfcfc;
