Let's try this again w/ the new font files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -864,10 +864,10 @@ hr {
 
 /* 'ꥁ' */
 .icon-clock:before, .feature.simple:before {
-  content: '\1f554';
+  content: '\a914';
 }
 
-/* '\1f554' */
+/* '\a914' */
 body {
   background: #fcfcfc;
 }
