increased size of scroll nav link targets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -915,15 +915,15 @@ body {
 .main {
   margin: 0 auto;
   max-width: 1200px;
-  padding: 0 10%;
+  padding: 0 13%;
   position: relative;
 }
 
 .scroll-nav {
-  margin-left: -10%;
+  margin-left: -13%;
   position: absolute;
   top: 74px;
-  width: 10%;
+  width: 13%;
 }
 .scroll-nav.fixed {
   position: fixed;
@@ -932,16 +932,19 @@ body {
 
 .scroll-nav-heading {
   display: block;
+  font-size: 24px;
   font-weight: 800;
-  margin: 0 auto;
+  margin: 0 auto 10px;
   overflow: hidden;
   width: 1.7em;
 }
 
 .scroll-nav-item {
+  font-size: 30px;
+  line-height: 1.2em;
   margin: 0 auto;
   overflow: hidden;
-  width: 25px;
+  width: 40px;
 }
 .scroll-nav-item:before {
   color: #7ebcd4;
@@ -949,7 +952,7 @@ body {
   position: absolute;
   pointer-events: none;
   text-align: center;
-  width: 25px;
+  width: 40px;
 }
 .scroll-nav-item:hover:before {
   color: #1996c7;
@@ -976,7 +979,7 @@ body {
 .scroll-nav-link {
   display: block;
   margin: 0 auto;
-  padding-left: 26px;
+  padding-left: 40px;
 }
 
 .post-article {
@@ -1092,12 +1095,12 @@ pre {
   }
 
   .main {
-    padding: 0 16.30435%;
+    padding: 0 16.66667%;
   }
 
   .scroll-nav {
-    margin-left: -14.1304348%;
-    width: 11.9565217%;
+    margin-left: -15.1041667%;
+    width: 13.5416667%;
   }
 
   .scroll-nav-heading {
@@ -1106,10 +1109,23 @@ pre {
   }
 
   .scroll-nav-item {
+    font-size: 19px;
+    overflow: visible;
     width: auto;
   }
   .scroll-nav-item.active {
-    padding-left: 10px;
+    -webkit-transform: scale(1.2, 1.2);
+    -moz-transform: scale(1.2, 1.2);
+    -ms-transform: scale(1.2, 1.2);
+    -o-transform: scale(1.2, 1.2);
+    transform: scale(1.2, 1.2);
+  }
+  .scroll-nav-item:before {
+    width: 30px;
+  }
+
+  .scroll-nav-link {
+    padding-left: 30px;
   }
 
   .feature {
