--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ figure {
  * Define consistent border, margin, and padding.
  */
 fieldset {
-  border: 1px solid silver;
+  border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
@@ -424,10 +424,10 @@ body {
 a {
   color: #7ebcd4;
   text-decoration: none;
-  -webkit-transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  transition: all 0.2s linear;
+  -webkit-transition: all .2s linear;
+  -moz-transition: all .2s linear;
+  -o-transition: all .2s linear;
+  transition: all .2s linear;
 }
 a:hover {
   color: #1996c7;
@@ -653,7 +653,7 @@ tfoot {
   font-style: italic;
 }
 tfoot td, tfoot th {
-  padding: 0.75em 10px;
+  padding: .75em 10px;
 }
 
 th, td, caption {
@@ -667,7 +667,7 @@ td, th {
 
 caption {
   border-bottom: 0;
-  padding: 0.75em 10px;
+  padding: .75em 10px;
   line-height: 1.45em;
   text-align: left;
   font-style: italic;
@@ -873,7 +873,6 @@ body {
 }
 
 .page-header {
-  -webkit-box-shadow: 0 2px 10px 0px #777777, 0 -1px 0 rgba(255, 255, 255, 0.16) inset;
   box-shadow: 0 2px 10px 0px #777777, 0 -1px 0 rgba(255, 255, 255, 0.16) inset;
   background-color: #1382ad;
   border-bottom: 1px solid #006186;
@@ -930,12 +929,6 @@ body {
   top: 60px;
 }
 
-.scroll-nav-heading {
-  display: none;
-  font-size: 24px;
-  font-weight: 800;
-}
-
 .scroll-nav-item {
   font-size: 30px;
   line-height: 1.2em;
@@ -984,12 +977,8 @@ body {
 }
 
 .your-item a {
-  background: -webkit-linear-gradient(#3ba5cf, #157fa9);
-  background: -moz-linear-gradient(#3ba5cf, #157fa9);
-  background: -ms-linear-gradient(#3ba5cf, #157fa9);
-  background: -o-linear-gradient(#3ba5cf, #157fa9);
-  background: linear-gradient(#3ba5cf, #157fa9);
-  -webkit-box-shadow: 0 1px 1px #5eb5d7 inset, 0 -1px 1px #127095 inset;
+  background: -webkit-linear-gradient( #3ba5cf, #157fa9);
+  background: linear-gradient( #3ba5cf, #157fa9);
   box-shadow: 0 1px 1px #5eb5d7 inset, 0 -1px 1px #127095 inset;
   border: 1px solid #127095;
   border-bottom-color: #0f5a77;
@@ -998,7 +987,7 @@ body {
   display: block;
   font-weight: 800;
   margin: 0 auto 20px;
-  padding: 0.5em 0;
+  padding: .5em 0;
   text-align: center;
   width: 14em;
 }
@@ -1006,12 +995,8 @@ body {
   padding-right: 0.45em;
 }
 .your-item a:hover {
-  background: -webkit-linear-gradient(#5eb5d7, #1996c7);
-  background: -moz-linear-gradient(#5eb5d7, #1996c7);
-  background: -ms-linear-gradient(#5eb5d7, #1996c7);
-  background: -o-linear-gradient(#5eb5d7, #1996c7);
-  background: linear-gradient(#5eb5d7, #1996c7);
-  -webkit-box-shadow: 0 1px 1px #80c5e0 inset, 0 -1px 1px #1687b3 inset;
+  background: -webkit-linear-gradient( #5eb5d7, #1996c7);
+  background: linear-gradient( #5eb5d7, #1996c7);
   box-shadow: 0 1px 1px #80c5e0 inset, 0 -1px 1px #1687b3 inset;
   border-color: #1687b3;
   border-bottom-color: #127095;
@@ -1089,7 +1074,7 @@ pre {
   }
 
   .main {
-    padding: 0 16.66667%;
+    padding: 0 16.6666667%;
   }
 
   .scroll-nav {
