--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,12 @@
   clear: both;
 }
 
-.unstyled-list, .scroll-nav-list, .all-yours, .features-list, .author-details {
+.unstyled-list, .scroll-nav__list, .all-yours, .features-list {
   padding-left: 0;
   list-style: none;
 }
 
-/* normalize.css v2.0.1 | MIT License | git.io/normalize */
+/*! normalize.css v2.0.1 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -476,7 +476,7 @@ h3 {
   margin-bottom: 0.8em;
 }
 
-h4, .delta, .page-byline {
+h4, .delta, .page__byline {
   font-size: 1em;
 }
 
@@ -730,39 +730,39 @@ hr {
   font-style: normal;
 }
 
-.icon-info:before, .scroll-nav-item.colophon:before,
+.icon-info:before, .scroll-nav__item.colophon:before,
 .icon-home:before,
-.author-link.home:before,
+.author__link.home:before,
 .icon-cog:before,
-.scroll-nav-item.options:before,
+.scroll-nav__item.options:before,
 .icon-attention:before,
-.scroll-nav-item.errors:before,
+.scroll-nav__item.errors:before,
 .icon-eye:before,
-.scroll-nav-item.usage:before,
+.scroll-nav__item.usage:before,
 .icon-code:before,
 .feature.customize:before,
 .icon-address:before,
-.page-title:before,
+.page__title:before,
 .icon-publish:before,
-.scroll-nav-item.top:before,
+.scroll-nav__item.top:before,
 .icon-flow-branch:before,
 .fork-it:before,
 .icon-gauge:before,
 .feature.size:before,
 .icon-traffic-cone:before,
-.scroll-nav-item.issues:before,
+.scroll-nav__item.issues:before,
 .icon-cc:before,
-.scroll-nav-item.license:before,
+.scroll-nav__item.license:before,
 .icon-github:before,
-.author-link.github:before,
+.author__link.github:before,
 .icon-twitter:before,
-.author-link.twitter:before,
+.author__link.twitter:before,
 .icon-dribbble:before,
-.author-link.dribbble:before,
+.author__link.dribbble:before,
 .icon-users:before,
-.scroll-nav-item.authors:before,
+.scroll-nav__item.authors:before,
 .icon-doc-text:before,
-.scroll-nav-item.features:before,
+.scroll-nav__item.features:before,
 .icon-download:before,
 .grab-it:before,
 .icon-clock:before,
@@ -773,27 +773,27 @@ hr {
   speak: none;
 }
 
-.icon-info:before, .scroll-nav-item.colophon:before {
+.icon-info:before, .scroll-nav__item.colophon:before {
   content: '\2139';
 }
 
 /* 'ℹ' */
-.icon-home:before, .author-link.home:before {
+.icon-home:before, .author__link.home:before {
   content: '\2302';
 }
 
 /* '⌂' */
-.icon-cog:before, .scroll-nav-item.options:before {
+.icon-cog:before, .scroll-nav__item.options:before {
   content: '\2699';
 }
 
 /* '⚙' */
-.icon-attention:before, .scroll-nav-item.errors:before {
+.icon-attention:before, .scroll-nav__item.errors:before {
   content: '\26a0';
 }
 
 /* '⚠' */
-.icon-eye:before, .scroll-nav-item.usage:before {
+.icon-eye:before, .scroll-nav__item.usage:before {
   content: '\e70a';
 }
 
@@ -803,12 +803,12 @@ hr {
 }
 
 /* '' */
-.icon-address:before, .page-title:before {
+.icon-address:before, .page__title:before {
   content: '\e723';
 }
 
 /* '' */
-.icon-publish:before, .scroll-nav-item.top:before {
+.icon-publish:before, .scroll-nav__item.top:before {
   content: '\e74d';
 }
 
@@ -823,37 +823,37 @@ hr {
 }
 
 /* '' */
-.icon-traffic-cone:before, .scroll-nav-item.issues:before {
+.icon-traffic-cone:before, .scroll-nav__item.issues:before {
   content: '\e7a3';
 }
 
 /* '' */
-.icon-cc:before, .scroll-nav-item.license:before {
+.icon-cc:before, .scroll-nav__item.license:before {
   content: '\e7a5';
 }
 
 /* '' */
-.icon-github:before, .author-link.github:before {
+.icon-github:before, .author__link.github:before {
   content: '\f300';
 }
 
 /* '' */
-.icon-twitter:before, .author-link.twitter:before {
+.icon-twitter:before, .author__link.twitter:before {
   content: '\f309';
 }
 
 /* '' */
-.icon-dribbble:before, .author-link.dribbble:before {
+.icon-dribbble:before, .author__link.dribbble:before {
   content: '\f31b';
 }
 
 /* '' */
-.icon-users:before, .scroll-nav-item.authors:before {
+.icon-users:before, .scroll-nav__item.authors:before {
   content: '\a965';
 }
 
 /* 'ꥥ' */
-.icon-doc-text:before, .scroll-nav-item.features:before {
+.icon-doc-text:before, .scroll-nav__item.features:before {
   content: '\a902';
 }
 
@@ -872,7 +872,7 @@ body {
   background: #fcfcfc;
 }
 
-.page-header {
+.page__header {
   box-shadow: 0 2px 10px 0px #777777, 0 -1px 0 rgba(255, 255, 255, 0.16) inset;
   background-color: #1382ad;
   border-bottom: 1px solid #006186;
@@ -880,16 +880,16 @@ body {
   padding: 1.15em 10%;
   text-align: center;
 }
-.page-header p {
+.page__header p {
   margin-bottom: 0;
 }
 
-.page-title,
-.page-byline {
+.page__title,
+.page__byline {
   color: #fff;
 }
 
-.page-title {
+.page__title {
   font-family: "Alfa Slab One", Georgia, serif;
   font-size: 2.25em;
   font-weight: normal;
@@ -899,14 +899,14 @@ body {
   position: relative;
   text-shadow: 0 -1px 0 #006186;
 }
-.page-title:before {
+.page__title:before {
   font-size: 60px;
   position: relative;
   right: -22px;
   top: -5px;
 }
 
-.page-byline {
+.page__byline {
   margin-bottom: .1em;
   padding-top: .4em;
 }
@@ -922,21 +922,20 @@ body {
   margin-left: -15.625%;
   position: absolute;
   top: 74px;
-  width: 12.5%;
 }
-.scroll-nav.fixed {
+.scroll-nav.fixed .scroll-nav__wrapper {
   position: fixed;
   top: 60px;
 }
 
-.scroll-nav-item {
+.scroll-nav__item {
   font-size: 30px;
   line-height: 1.2em;
   margin: 0 auto;
   overflow: hidden;
   width: 40px;
 }
-.scroll-nav-item:before {
+.scroll-nav__item:before {
   color: #7ebcd4;
   display: block;
   position: absolute;
@@ -944,10 +943,10 @@ body {
   text-align: center;
   width: 40px;
 }
-.scroll-nav-item:hover:before {
+.scroll-nav__item:hover:before {
   color: #1996c7;
 }
-.scroll-nav-item.active {
+.scroll-nav__item.active {
   -webkit-transform: scale(1.3, 1.3);
   -moz-transform: scale(1.3, 1.3);
   -ms-transform: scale(1.3, 1.3);
@@ -956,23 +955,23 @@ body {
   color: #1996c7;
   font-weight: 800;
 }
-.scroll-nav-item.active .scroll-nav-link {
+.scroll-nav__item.active .scroll-nav-link {
   color: #1996c7;
 }
-.scroll-nav-item.active:before {
+.scroll-nav__item.active:before {
   color: #1996c7;
 }
-.scroll-nav-item.active a:hover {
+.scroll-nav__item.active a:hover {
   font-weight: 800;
 }
 
-.scroll-nav-link {
+.scroll-nav__link {
   display: block;
   margin: 0 auto;
   padding-left: 42px;
 }
 
-.post-article {
+.post__article {
   padding: 80px 0;
 }
 
@@ -1015,23 +1014,11 @@ body {
   font-size: 4em;
 }
 
-.author-name {
-  display: inline-block;
-}
-
-.author-details {
-  display: inline-block;
-  margin: 0;
-}
-.author-details li {
-  display: inline-block;
-}
-
-.author-link {
+.author__link {
   display: inline-block;
   font-size: 1.2em;
 }
-.author-link:hover {
+.author__link:hover {
   -webkit-transform: scale(1.4, 1.4);
   -moz-transform: scale(1.4, 1.4);
   -ms-transform: scale(1.4, 1.4);
@@ -1058,18 +1045,18 @@ pre {
   }
 }
 @media screen and (min-width: 60em) {
-  .page-title {
+  .page__title {
     font-size: 4.125em;
     left: -18px;
     text-shadow: 0 -2px 0 #006186;
   }
-  .page-title:before {
+  .page__title:before {
     font-size: 100px;
     right: -34px;
     top: -9px;
   }
 
-  .page-byline {
+  .page__byline {
     font-size: 1.2em;
   }
 
@@ -1079,32 +1066,26 @@ pre {
 
   .scroll-nav {
     margin-left: -15.1041667%;
-    width: 13.5416667%;
   }
 
-  .scroll-nav-heading {
-    text-align: center;
-    width: auto;
-  }
-
-  .scroll-nav-item {
+  .scroll-nav__item {
     font-size: 19px;
     line-height: 1.4em;
     overflow: visible;
     width: auto;
   }
-  .scroll-nav-item.active {
+  .scroll-nav__item.active {
     -webkit-transform: scale(1.2, 1.2);
     -moz-transform: scale(1.2, 1.2);
     -ms-transform: scale(1.2, 1.2);
     -o-transform: scale(1.2, 1.2);
     transform: scale(1.2, 1.2);
   }
-  .scroll-nav-item:before {
+  .scroll-nav__item:before {
     width: 30px;
   }
 
-  .scroll-nav-link {
+  .scroll-nav__link {
     padding-left: 30px;
   }
 
