--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -175,7 +175,7 @@ $green: #6bac60;
 body {
 	background: #fcfcfc;
 }
-.page-header {
+.page__header {
 	@include box-shadow(0 2px 10px 0px #777, 0 -1px 0 rgba(255,255,255,0.16) inset);
 
 	background-color: $header_bg;
@@ -189,12 +189,12 @@ body {
 	}
 }
 
-.page-title,
-.page-byline {
+.page__title,
+.page__byline {
 	color: #fff;
 }
 
-.page-title {
+.page__title {
 	@extend .icon-address;
 
 	font-family: "Alfa Slab One", Georgia, serif;
@@ -214,7 +214,7 @@ body {
 	}
 }
 
-.page-byline {
+.page__byline {
 	@extend .delta;
 
 	margin-bottom: .1em;
@@ -232,19 +232,18 @@ body {
 	margin-left: -15.625%;
 	position: absolute;
 	top: 74px;
-	width: 12.5%;
 
-	&.fixed {
+	&.fixed .scroll-nav__wrapper {
 		position: fixed;
 		top: 60px;
 	}
 }
 
-.scroll-nav-list {
+.scroll-nav__list {
 	@extend .unstyled-list;
 }
 
-.scroll-nav-item {
+.scroll-nav__item {
 	font-size: 30px;
 	line-height: 1.2em;
 	margin: 0 auto;
@@ -320,13 +319,13 @@ body {
 	}
 }
 
-.scroll-nav-link {
+.scroll-nav__link {
 	display: block;
 	margin: 0 auto;
 	padding-left: 42px;
 }
 
-.post-article {
+.post__article {
 	padding: 80px 0;
 }
 
@@ -408,22 +407,7 @@ body {
 	}
 }
 
-.author-name {
-	display: inline-block;
-}
-
-.author-details {
-	@extend .unstyled-list;
-
-	display: inline-block;
-	margin: 0;
-
-	li {
-		display: inline-block;
-	}
-}
-
-.author-link {
+.author__link {
 	display: inline-block;
 	font-size: 1.2em;
 
@@ -462,7 +446,7 @@ pre {
 }
 
 @media screen and (min-width: 60em) { // 960px
-	.page-title {
+	.page__title {
 		font-size: 4.125em;
 		left: -18px;
 		text-shadow: 0 -2px 0 saturate(shade($header_bg, 30%), 35%);
@@ -474,7 +458,7 @@ pre {
 		}
 	}
 
-	.page-byline {
+	.page__byline {
 		font-size: 1.2em;
 	}
 
@@ -484,15 +468,9 @@ pre {
 
 	.scroll-nav {
 		margin-left: -15.1041667%;
-		width: 13.5416667%;
 	}
 
-	.scroll-nav-heading {
-		text-align: center;
-		width: auto;
-	}
-
-	.scroll-nav-item {
+	.scroll-nav__item {
 		font-size: 19px;
 		line-height: 1.4em;
 		overflow: visible;
@@ -507,7 +485,7 @@ pre {
 		}
 	}
 
-	.scroll-nav-link {
+	.scroll-nav__link {
 		padding-left: 30px;
 	}
 
