--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-.clearfix, form ul li, .all-yours, .features-list {
+.clearfix, form ul li, .main, .all-yours, .features-list {
   *zoom: 1;
 }
-.clearfix:before, form ul li:before, .all-yours:before, .features-list:before, .clearfix:after, form ul li:after, .all-yours:after, .features-list:after {
+.clearfix:before, form ul li:before, .main:before, .all-yours:before, .features-list:before, .clearfix:after, form ul li:after, .main:after, .all-yours:after, .features-list:after {
   content: "";
   display: table;
 }
-.clearfix:after, form ul li:after, .all-yours:after, .features-list:after {
+.clearfix:after, form ul li:after, .main:after, .all-yours:after, .features-list:after {
   clear: both;
 }
 
@@ -459,7 +459,7 @@ h2, .beta {
 
 h2 {
   font-weight: 800;
-  line-height: 1;
+  line-height: 1.2;
   padding-top: 0.35em;
   margin-bottom: 0.65em;
 }
@@ -476,7 +476,7 @@ h3 {
   margin-bottom: 0.8em;
 }
 
-h4, .delta, .page__byline {
+h4, .delta {
   font-size: 1em;
 }
 
@@ -743,8 +743,9 @@ hr {
 .feature.customize:before,
 .icon-address:before,
 .page__title:before,
+.scroll-nav__heading:before,
 .icon-publish:before,
-.scroll-nav__item.top:before,
+.scroll-nav__item.description:before,
 .icon-flow-branch:before,
 .fork-it:before,
 .icon-gauge:before,
@@ -803,12 +804,12 @@ hr {
 }
 
 /* '' */
-.icon-address:before, .page__title:before {
+.icon-address:before, .page__title:before, .scroll-nav__heading:before {
   content: '\e723';
 }
 
 /* '' */
-.icon-publish:before, .scroll-nav__item.top:before {
+.icon-publish:before, .scroll-nav__item.description:before {
   content: '\e74d';
 }
 
@@ -869,14 +870,14 @@ hr {
 
 /* '\a914' */
 body {
-  background: #fcfcfc;
+  background: #f8f7f3;
 }
 
 .page__header {
   box-shadow: 0 2px 10px 0px #777777, 0 -1px 0 rgba(255, 255, 255, 0.16) inset;
   background-color: #1382ad;
   border-bottom: 1px solid #006186;
-  margin-bottom: 1em;
+  margin-bottom: 50px;
   padding: 1.15em 10%;
   text-align: center;
 }
@@ -884,8 +885,7 @@ body {
   margin-bottom: 0;
 }
 
-.page__title,
-.page__byline {
+.page__title {
   color: #fff;
 }
 
@@ -906,29 +906,59 @@ body {
   top: -5px;
 }
 
-.page__byline {
-  margin-bottom: .1em;
-  padding-top: .4em;
+.overview {
+  font-size: 1.3em;
+  margin: 0 auto 40px;
+  max-width: 580px;
+  text-align: center;
 }
 
 .main {
-  margin: 0 auto;
+  margin: 0 auto 50px;
   max-width: 1200px;
-  padding: 0 4.6875% 0 18.75%;
+  padding: 0 4.6875%;
   position: relative;
 }
 
 .scroll-nav {
-  margin-left: -15.625%;
   position: absolute;
-  top: 74px;
 }
 .scroll-nav.fixed .scroll-nav__wrapper {
   position: fixed;
   top: 60px;
 }
 
+.scroll-nav__wrapper {
+  border: 1px solid #006f99;
+  background-color: #1e8cb7;
+  border-radius: 6px;
+  padding: 10px 5px;
+}
+
+.scroll-nav__heading {
+  border-bottom: 2px solid #fff;
+  color: #fff;
+  display: block;
+  font-family: "Alfa Slab One", Georgia, serif;
+  font-size: 1.2em;
+  margin-bottom: 15px;
+  overflow: hidden;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  text-align: center;
+  text-shadow: 0 -1px 0 #006186;
+  width: 40px;
+}
+.scroll-nav__heading:before {
+  font-size: 40px;
+}
+
+.scroll-nav__list {
+  margin-bottom: 0;
+}
+
 .scroll-nav__item {
+  font-weight: 600;
   font-size: 30px;
   line-height: 1.2em;
   margin: 0 auto;
@@ -936,15 +966,12 @@ body {
   width: 40px;
 }
 .scroll-nav__item:before {
-  color: #7ebcd4;
+  color: #fff;
   display: block;
   position: absolute;
   pointer-events: none;
   text-align: center;
   width: 40px;
-}
-.scroll-nav__item:hover:before {
-  color: #1996c7;
 }
 .scroll-nav__item.active {
   -webkit-transform: scale(1.3, 1.3);
@@ -952,27 +979,34 @@ body {
   -ms-transform: scale(1.3, 1.3);
   -o-transform: scale(1.3, 1.3);
   transform: scale(1.3, 1.3);
-  color: #1996c7;
   font-weight: 800;
-}
-.scroll-nav__item.active .scroll-nav-link {
-  color: #1996c7;
-}
-.scroll-nav__item.active:before {
-  color: #1996c7;
 }
 .scroll-nav__item.active a:hover {
   font-weight: 800;
 }
 
 .scroll-nav__link {
+  color: #fff;
   display: block;
   margin: 0 auto;
   padding-left: 42px;
 }
+.scroll-nav__link:hover {
+  color: #fff;
+}
 
 .post__article {
-  padding: 80px 0;
+  background-color: #fff;
+  border: 1px solid #e5e2d3;
+  border-radius: 6px;
+  float: right;
+  margin-left: 65px;
+  padding: 20px;
+}
+
+.all-yours {
+  max-width: 580px;
+  margin: 0 auto 20px;
 }
 
 .your-item a {
@@ -1026,11 +1060,21 @@ body {
   transform: scale(1.4, 1.4);
 }
 
-pre {
+pre,
+code {
+  border-radius: 3px;
   background-color: #f7f7f7;
+  border: 1px solid #ebebeb;
   font-size: 75%;
   line-height: 18px;
-  padding: 6px 10px;
+}
+
+pre {
+  padding: 10px;
+}
+
+code {
+  padding: 3px 6px;
 }
 
 @media screen and (min-width: 40.625em) {
@@ -1056,23 +1100,45 @@ pre {
     top: -9px;
   }
 
-  .page__byline {
-    font-size: 1.2em;
+  .overview {
+    font-size: 2em;
+    max-width: 700px;
+  }
+
+  .all-yours {
+    margin-bottom: 40px;
   }
 
   .main {
-    padding: 0 16.6666667%;
+    padding: 0 7%;
   }
 
-  .scroll-nav {
-    margin-left: -15.1041667%;
+  .post__article {
+    margin-left: 210px;
+    padding: 30px;
+  }
+
+  .scroll-nav__wrapper {
+    padding: 15px 10px;
+  }
+
+  .scroll-nav__heading {
+    font-size: 1.7em;
+    text-indent: -16px;
+    width: 170px;
+  }
+  .scroll-nav__heading:before {
+    font-size: 1.654411765em;
+    position: relative;
+    right: -0.30em;
+    top: -0.07em;
   }
 
   .scroll-nav__item {
     font-size: 19px;
     line-height: 1.4em;
     overflow: visible;
-    width: auto;
+    width: 170px;
   }
   .scroll-nav__item.active {
     -webkit-transform: scale(1.2, 1.2);
@@ -1080,6 +1146,7 @@ pre {
     -ms-transform: scale(1.2, 1.2);
     -o-transform: scale(1.2, 1.2);
     transform: scale(1.2, 1.2);
+    padding-left: 0.5em;
   }
   .scroll-nav__item:before {
     width: 30px;
